@@ -17,7 +17,7 @@ package require Tcl 8.5	;# Guard against [source] in an 8.4- interp
 # Insist on running with compatible version of Tcl
 package require Tcl 8.5b1-8.6
 # Verify that we have Tk binary and script components from the same release
-package require -exact Tk  8.5b1.1
+package require -exact Tk  8.5b2
 
 # Create a ::tk namespace
 namespace eval ::tk {
