@@ -27,7 +27,7 @@ m4_ifdef([SC_USE_CONFIG_HEADERS], [
 TK_VERSION=8.5
 TK_MAJOR_VERSION=8
 TK_MINOR_VERSION=5
-TK_PATCH_LEVEL="b1.1"
+TK_PATCH_LEVEL="b2"
 VERSION=${TK_VERSION}
 LOCALES="cs de el en en_gb eo es fr hu it nl pl pt ru sv"
 
